增加上传头像功能

--- a/chatroom1.1/public/index.html
+++ b/chatroom1.1/public/index.html
@@ -28,6 +28,14 @@
       <img src="./images/9.jpg">
       <img src="./images/10.jpg">
     </div>
+    <div class="uploadImg" id="uploadImg">
+      <button class="uploadImgBtn" id="uploadImgBtn">上传头像</button>
+      <div class="previewContainer" id="previewContainer">
+        <img src="images/upload.png" class="uploadIcon">
+        <div id="preview"></div>
+        <input type="file" id="uploadFileInput" class="isVisible">
+      </div>
+    </div>
     <button class="loginBtn" id="loginBtn">登录</button>
   </div>
 </div>
