--- a/chatroom1.1/public/index.html
+++ b/chatroom1.1/public/index.html
@@ -68,45 +68,57 @@
     </div>
   </div>
 
+  <!-- 预览图片 -->
+  <div>
+    <!--黑色遮罩-->
+    <div class="black_overlay" id="black_overlay"></div>
+
+    <!--预览容器，存放点击放大后的图片-->
+    <div class="enlargeContainer" id="enlargeContainer">
+      <!-- 关闭按钮，一个叉号图片 -->
+      <img src="images/close.png" class="close" id="close">
+    </div>
+  </div>
+
   <!-- 右侧聊天界面 -->
   <div class="chat-room">
     <p class="title">聊天室(<span id="userCount">99</span>)</p>
     <div class="chat-container">
-<!--      <p class="tip">“往事随风”邀请你和"Boy"加入了群聊</p>
-      <div class="sendImgMsg">
-        <img src="./images/huitailang.jpg" class="sendImg">
-        <img src="./images/2.jpg" class="avatarImg">
-      </div>
-      <div class="receiveMsg">
-        <img src="./images/1.jpg" class="avatarImg">
-        <div class="rightStyle">
-          <span class="nickname">小美</span>
-          <p class="receiveContent">aa吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭dd等等</p>
-        </div>
-      </div>
-      <p class="tip">小王离开了聊天室</p>
-      <div class="sendMsg">
-        <span class="sendContent">d等等在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛饿呢</span>
-        <img src="./images/2.jpg" class="avatarImg">
-      </div>
-      <div class="receiveMsg">
-        <img src="./images/1.jpg" class="avatarImg">
-        <div class="rightStyle">
-          <span class="nickname">小美</span>
-          <img src="./images/huitailang.jpg" class="receiveImgMsg">
-        </div>
-      </div>
-      <div class="sendMsg">
-        <span class="sendContent">d等等在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛饿呢</span>
-        <img src="./images/2.jpg" class="avatarImg">
-      </div>
-      <div class="receiveMsg">
-        <img src="./images/1.jpg" class="avatarImg">
-        <div class="rightStyle">
-          <span class="nickname">小美</span>
-          <p class="receiveContent">aa吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭dd等等</p>
-        </div>
-      </div>-->
+      <!--      <p class="tip">“往事随风”邀请你和"Boy"加入了群聊</p>
+            <div class="sendImgMsg">
+              <img src="./images/huitailang.jpg" class="sendImg">
+              <img src="./images/2.jpg" class="avatarImg">
+            </div>
+            <div class="receiveMsg">
+              <img src="./images/1.jpg" class="avatarImg">
+              <div class="rightStyle">
+                <span class="nickname">小美</span>
+                <p class="receiveContent">aa吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭dd等等</p>
+              </div>
+            </div>
+            <p class="tip">小王离开了聊天室</p>
+            <div class="sendMsg">
+              <span class="sendContent">d等等在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛饿呢</span>
+              <img src="./images/2.jpg" class="avatarImg">
+            </div>
+            <div class="receiveMsg">
+              <img src="./images/1.jpg" class="avatarImg">
+              <div class="rightStyle">
+                <span class="nickname">小美</span>
+                <img src="./images/huitailang.jpg" class="receiveImgMsg">
+              </div>
+            </div>
+            <div class="sendMsg">
+              <span class="sendContent">d等等在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛在干嘛饿呢</span>
+              <img src="./images/2.jpg" class="avatarImg">
+            </div>
+            <div class="receiveMsg">
+              <img src="./images/1.jpg" class="avatarImg">
+              <div class="rightStyle">
+                <span class="nickname">小美</span>
+                <p class="receiveContent">aa吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭吃饭dd等等</p>
+              </div>
+            </div>-->
 
     </div>
     <div class="menus">
@@ -120,7 +132,7 @@
 
       </div>
       <div class="inputContainer">
-<!--        <textarea rows="5" cols="85" maxlength="300" autofocus></textarea>-->
+        <!--        <textarea rows="5" cols="85" maxlength="300" autofocus></textarea>-->
         <div id="textareaMsg" class="contentEdit" contenteditable></div>
         <div class="sendContainer">
           <span class="sendTip">按下Ctrl+Enter发送，Enter换行</span>
